src/style.scss
* {
  user-select: none;
}

html {
  height: 100%;
}

html,
body {
  background: #000000;
  font-family: Arial, sans-serif;
  margin: 0;
  min-height: 100%;
  width: 100%;
}

body {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  // Disable pull-to-refresh on chrome mobile
  overscroll-behavior-y: contain; // sass-lint:disable-line no-misspelled-properties
}

body,
a {
  color: #777;
}

h1 {
  color: #ddd;
  font-family: 'Montserrat', sans-serif;
  font-weight: 100;
  margin-bottom: 0;
}

#clearnotes {
  margin-right: 10px;
  padding: 7px;
}

canvas {
  margin: -4px 0;
}

.canvaswrap {
  height: 500px;
  position: relative;
  visibility: hidden;
  width: 500px;
}

#clipboard-input {
  background-color: #222;
  border: solid #444 1px;
  border-radius: 3px 0 0 3px;
  color: #999;
  font-size: 0.7em;
  height: 24px;
  padding: 0 5px;
  width: 300px;
}

.clipboard {
  border-radius: 0 3px 3px 0;
  color: #aaa;
  height: 26px;
}

button,
.button {
  background: #333;
  border: solid #808080 1px;
  border-radius: 4px;
  color: #ddd;
  display: inline-block;
  font-weight: bold;
  text-decoration: none;

  :hover {
    background: #555;
    cursor: pointer;
  }
}

.icon {
  filter: invert(1);
  height: 1em;
  vertical-align: middle;
}

.share-wrap {
  font-size: .8em;
}

.share-wrap > * {
  vertical-align: middle;
}

// play button

body:not(.playing) {
  canvas {
    filter: blur(5px);
    opacity: .3;
    overflow: hidden;
    pointer-events: none;
  }

  .canvaswrap {
    border: solid #444 1px;
  }

  .play-btn {
    background: radial-gradient(rgba(255, 0, 128, 0.8) 60%, rgba(255, 255, 255, 1) 62%);
    border-radius: 50%;
    box-shadow: 0 0 25px 3px rgba(255, 0, 128, 0.8);
    display: block;
    height: 50px;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 50px;

    // triangle
    &::after {
      border-bottom: 9px solid transparent;
      border-left: 13px solid #fff;
      border-top: 9px solid transparent;
      content: '';
      height: 0;
      left: 50%;
      position: absolute;
      top: 50%;
      transform: translateX(-40%) translateY(-50%);
      transform-origin: center center;
      transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
      width: 0;
      z-index: 100;
    }

    // pulse wave
    &::before {
      animation: pulsate1 2s;
      animation-delay: 0s;
      animation-direction: forwards;
      animation-iteration-count: infinite;
      animation-timing-function: steps;
      background: rgba(198, 16, 0, 0);
      border: 5px solid rgba(255, 255, 255, .75);
      border-radius: 50%;
      content: '';
      height: 150%;
      left: -35%;
      opacity: 1;
      position: absolute;
      top: -35%; // it's magic! :O
      width: 150%;
    }
  }
}

@keyframes pulsate1 {
  0% {
    box-shadow: inset 0 0 25px 3px rgba(255, 255, 255, 0.75), 0 0 25px 10px rgba(255, 255, 255, 0.75);
    opacity: 1;
    transform: scale(.6);
  }

  100% {
    box-shadow: none;
    opacity: 0;
    transform: scale(1);

  }
}

